upload all files

--- a/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingblacknickel/index.html
@@ -415,9 +415,9 @@
         <h2 id="maint-h" class="section" data-i18n-key="maint_h">การปรับเติมน้ำยา & ความปลอดภัย</h2>
         <div class="content">
           <ul>
-            <li data-i18n-key="maint_1">การควบคุมคุณภาพของสารละลายชุบถือเป็นสิ่งสำคัญอย่างยิ่ง โดยค่า โบเม่ (Baumé) ซึ่งเป็นหน่วยวัดความหนาแน่นของสารละลาย ควรได้รับการตรวจสอบอย่างสม่ำเสมอให้อยู่ในช่วง ~9–10. หากค่าที่วัดได้ต่ำกว่าเกณฑ์ที่กำหนด ควรเติมสารเคมีตามปริมาณที่ระบุไว้ในคู่มือการใช้งาน และควรทำการทดสอบด้วย เซลล์ฮัลล์ (Hull Cell) เพิ่มเติม เพื่อประเมินประสิทธิภาพของสารละลายและปรับสัดส่วนสารเคมีให้เหมาะสมก่อนที่จะเริ่มชุบจริง</li>
-            <li data-i18n-key="maint_2">เพื่อให้สารละลายชุบมีความสะอาดและปราศจากสิ่งเจือปน ควรเปิดระบบการ กรองต่อเนื่อง โดยใช้ไส้กรองที่มีความละเอียด 10 ไมโครเมตร (µm). การกรองจะช่วยขจัดอนุภาคขนาดเล็กที่อาจปนเปื้อนในสารละลาย ทำให้ผิวชิ้นงานที่ได้มีความใสและสีของผิวเคลือบมีความสม่ำเสมอ. การกรองอย่างสม่ำเสมอจะช่วยรักษาสมดุลของน้ำยาและยืดอายุการใช้งานของสารละลายได้อีกด้วย</li>
-            <li data-i18n-key="maint_3">ควรใช้อุปกรณ์ป้องกันส่วนบุคคล (PPE) อย่างเคร่งครัด ได้แก่ ถุงมือที่ทนสารเคมี เพื่อป้องกันการสัมผัสโดยตรง, แว่นตานิรภัย เพื่อป้องกันสารเคมีกระเด็นเข้าตา, และ หน้ากาก เพื่อป้องกันการสูดดมไอระเหยหรือละอองสารเคมีที่เป็นอันตราย การสวมใส่อุปกรณ์เหล่านี้จะช่วยลดความเสี่ยงต่ออันตรายที่อาจเกิดขึ้นได้อย่างมีประสิทธิภาพ</li>
+            <li data-i18n-key="maint_1">การควบคุมคุณภาพของสารละลายชุบถือเป็นสิ่งสำคัญอย่างยิ่ง โดยค่า โบเม่ (Baumé) ซึ่งเป็นหน่วยวัดความหนาแน่นของสารละลาย ควรได้รับการตรวจสอบอย่างสม่ำเสมอให้อยู่ในช่วง ~9–10. หากค่าที่วัดได้ต่ำกว่าเกณฑ์ที่กำหนด ควรเติมสารเคมีตามปริมาณที่ระบุไว้ในคู่มือการใช้งาน และควรทำการทดสอบด้วย เซลล์ฮัลล์ (Hull Cell) เพิ่มเติม เพื่อประเมินประสิทธิภาพของสารละลายและปรับสัดส่วนสารเคมีให้เหมาะสมก่อนที่จะเริ่มชุบจริง</li><br>
+            <li data-i18n-key="maint_2">เพื่อให้สารละลายชุบมีความสะอาดและปราศจากสิ่งเจือปน ควรเปิดระบบการ กรองต่อเนื่อง โดยใช้ไส้กรองที่มีความละเอียด 10 ไมโครเมตร (µm). การกรองจะช่วยขจัดอนุภาคขนาดเล็กที่อาจปนเปื้อนในสารละลาย ทำให้ผิวชิ้นงานที่ได้มีความใสและสีของผิวเคลือบมีความสม่ำเสมอ. การกรองอย่างสม่ำเสมอจะช่วยรักษาสมดุลของน้ำยาและยืดอายุการใช้งานของสารละลายได้อีกด้วย</li><br>
+            <li data-i18n-key="maint_3">ควรใช้อุปกรณ์ป้องกันส่วนบุคคล (PPE) อย่างเคร่งครัด ได้แก่ ถุงมือที่ทนสารเคมี เพื่อป้องกันการสัมผัสโดยตรง, แว่นตานิรภัย เพื่อป้องกันสารเคมีกระเด็นเข้าตา, และ หน้ากาก เพื่อป้องกันการสูดดมไอระเหยหรือละอองสารเคมีที่เป็นอันตราย การสวมใส่อุปกรณ์เหล่านี้จะช่วยลดความเสี่ยงต่ออันตรายที่อาจเกิดขึ้นได้อย่างมีประสิทธิภาพ</li><br>
           </ul>
         </div>
       </section>
