--- a/products/platingcoating/nickelplating/troubleshootingnickel/index.html
+++ b/products/platingcoating/nickelplating/troubleshootingnickel/index.html
@@ -6,7 +6,7 @@
   <title data-i18n-key="title">Nickel Plating — คู่มือปฏิบัติ | Baume Chemical Blog</title>
 
   <!-- SEO base -->
-  <meta name="description" content="คู่มือการชุบนิกเกิล: ภาพรวม หลักการ คุณสมบัติ จุดเด่น สูตร Watt’s การเตรียมบ่อ ขั้นตอนการชุบ สภาพการทำงาน และอุปกรณ์ที่จำเป็น พร้อมฟีเจอร์การ์ดแบบ 3×2." />
+  <meta name="description" content="คู่มือการชุบนิกเกิล: ภาพรวม หลักการ คุณสมบัติ จุดเด่น การเตรียมบ่อ ขั้นตอนการชุบ สภาพการทำงาน และอุปกรณ์ที่จำเป็น พร้อมฟีเจอร์การ์ดแบบ 3×2." />
   <meta name="robots" content="index,follow,max-snippet:-1,max-image-preview:large,max-video-preview:-1" />
   <link rel="canonical" href="https://www.baumechemical.com/products/platingcoating/nickelplating/troubleshootingnickel/index.html" />
   <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32.png" />
@@ -321,20 +321,46 @@
         </div>
       </section>
 
-      <!-- Process -->
-      <section id="process" class="reveal section-block" aria-labelledby="process-h">
-        <h2 id="process-h" class="section" data-i18n-key="process_h">ส่วนที่ 2: ขั้นตอนการชุบ</h2>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="proc_s1">เตรียมผิว: ทำความสะอาด ขจัดไขมัน และล้างน้ำ</li>
-            <li data-i18n-key="proc_s2">แอคทิเวต: ดิปกรดอ่อน แล้วล้างน้ำ</li>
-            <li data-i18n-key="proc_s3">ชุบนิกเกิลเงาในบ่อ Watt’s + A-Brite ตามพารามิเตอร์</li>
-            <li data-i18n-key="proc_s4">ล้างน้ำ 2–3 ขั้น</li>
-            <li data-i18n-key="proc_s5">ชุบโครเมียมต่อ หากเป็นงานตกแต่ง</li>
-            <li data-i18n-key="proc_s6">อบแห้ง/เป่าแห้ง</li>
-          </ul>
-        </div>
-      </section>
+<!-- Process -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+  <h2 id="process-h" class="section" data-i18n-key="process_h">ส่วนที่ 2: ขั้นตอนการชุบ</h2>
+
+  <div class="content">
+    <!-- 1) Surface prep -->
+    <h3 data-i18n-key="proc_1_h">การเตรียมผิว</h3>
+    <p data-i18n-key="proc_1_p">เป็นขั้นตอนที่สำคัญที่สุดเพื่อให้ได้การเคลือบที่ยึดเกาะดีและสม่ำเสมอ</p>
+    <ul>
+      <li data-i18n-key="proc_1_s1">ทำความสะอาด: ขจัดคราบสกปรกทั่วไป เช่น ฝุ่น ดิน หรือคราบไขมันที่เกาะอยู่บนชิ้นงาน โดยอาจใช้ผงซักฟอกหรือสารละลายทำความสะอาดที่เหมาะสม</li>
+      <li data-i18n-key="proc_1_s2">ขจัดไขมัน (Degreasing): เป็นการทำความสะอาดคราบไขมันที่มองไม่เห็น เช่น คราบน้ำมันจากการกลึงหรือคราบจาระบี ซึ่งมักใช้สารเคมีที่มีฤทธิ์เป็นด่างหรือตัวทำละลายอินทรีย์</li>
+      <li data-i18n-key="proc_1_s3">ล้างน้ำ: ล้างชิ้นงานด้วยน้ำสะอาดหลาย ๆ ครั้ง เพื่อกำจัดสารเคมีและสิ่งสกปรกที่ตกค้างออกให้หมดก่อนเข้าสู่ขั้นตอนต่อไป</li>
+    </ul>
+
+    <!-- 2) Activation -->
+    <h3 data-i18n-key="proc_2_h">การแอคทิเวต (Activation)</h3>
+    <p data-i18n-key="proc_2_p">เป็นการปรับสภาพพื้นผิวให้พร้อมสำหรับการชุบ</p>
+    <ul>
+      <li data-i18n-key="proc_2_s1">ดิปกรดอ่อน: นำชิ้นงานไปแช่ในสารละลายกรดอ่อน เช่น กรดซัลฟูริก หรือกรดไฮโดรคลอริก เพื่อกำจัดชั้นออกไซด์บาง ๆ ที่อาจเกิดขึ้นบนผิวโลหะ ทำให้ผิวโลหะสะอาดและพร้อมสำหรับการรับการเคลือบ</li>
+      <li data-i18n-key="proc_2_s2">ล้างน้ำ: ล้างน้ำอีกครั้งเพื่อกำจัดกรดที่ตกค้าง</li>
+    </ul>
+
+    <!-- 3) Bright nickel -->
+    <h3 data-i18n-key="proc_3_h">การชุบนิกเกิลเงา</h3>
+    <p data-i18n-key="proc_3_p1">ชุบในบ่อ A-Brite: สารละลายมาตรฐานสำหรับการชุบนิกเกิล ประกอบด้วย นิกเกิลซัลเฟต (Nickel Sulfate) เป็นแหล่งของไอออนนิกเกิล, นิกเกิลคลอไรด์ (Nickel Chloride) ช่วยเพิ่มการนำไฟฟ้าและลดการเกิดฟอง, และกรดบอริก (Boric Acid) ช่วยควบคุมค่า pH ในการชุบ</p>
+    <p data-i18n-key="proc_3_p2">A-Brite: เป็นสารเติมแต่งที่ทำให้การชุบออกมาเป็นเงา ซึ่งอาจเป็นสารอินทรีย์หรือสารเคมีชนิดอื่นที่ช่วยปรับปรุงคุณสมบัติของสารละลาย เช่น ช่วยให้ผิวเคลือบเรียบเนียน เป็นมันเงา และเพิ่มความสามารถในการกระจายตัวของกระแสไฟฟ้า โดยควบคุมตัวแปรสำคัญ ได้แก่ ความหนาแน่นกระแส (Current Density) อุณหภูมิ (Temperature) และค่า pH เพื่อให้ได้ผลลัพธ์ที่ดีที่สุด</p>
+
+    <!-- 4) Rinse -->
+    <h3 data-i18n-key="proc_4_h">การล้างน้ำ</h3>
+    <p data-i18n-key="proc_4_p">หลังจากชุบเสร็จ ต้องล้างน้ำสะอาด 2–3 ขั้น เพื่อล้างสารเคมีที่ตกค้างออกให้หมดก่อนไปขั้นตอนต่อไป</p>
+
+    <!-- 5) Chrome over-plate -->
+    <h3 data-i18n-key="proc_5_h">การชุบโครเมียมต่อ</h3>
+    <p data-i18n-key="proc_5_p">การชุบนิกเกิลเดี่ยว ๆ จะมีสีเหลืองนวลคล้ายสเตนเลส แต่ยังไม่ทนทานต่อรอยขีดข่วนเท่าที่ควร การชุบโครเมียมต่อจากชั้นนิกเกิลจึงเป็นที่นิยมในงานตกแต่ง เพื่อให้ได้สีเงินสว่างสวยงาม และเพิ่มความทนทานต่อการสึกหรอและการกัดกร่อนได้ดียิ่งขึ้น</p>
+
+    <!-- 6) Dry -->
+    <h3 data-i18n-key="proc_6_h">การอบแห้ง/เป่าแห้ง</h3>
+    <p data-i18n-key="proc_6_p">เป็นขั้นตอนสุดท้ายเพื่อทำให้ชิ้นงานแห้งสนิทก่อนนำไปใช้งานหรือจัดเก็บ</p>
+  </div>
+</section>
 
       <!-- Conditions & Equipment -->
       <section id="conditions" class="reveal section-block" aria-labelledby="cond-h">
@@ -359,16 +385,33 @@
             </tbody>
           </table>
         </div>
+        </section>
 
-        <p class="lead" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</p>
-        <div class="content">
-          <ul>
-            <li data-i18n-key="equip_s1">บ่อชุบ: บุ PVC, PE, หรือ PP</li>
-            <li data-i18n-key="equip_s2">เครื่องกรอง: ต่อเนื่อง 10 µm</li>
-            <li data-i18n-key="equip_s3">ทำความร้อน/ระบายความร้อน 48–60 °C</li>
-            <li data-i18n-key="equip_s4">ระบบกวน: ถังแขวนใช้การแกว่งชิ้นงานช่วยกวน</li>
-          </ul>
-        </div>
+<!-- (แทนที่บล็อกเดิมตรงนี้) -->
+<section id="process" class="reveal section-block" aria-labelledby="process-h">
+<h2 class="section" data-i18n-key="equip_h">อุปกรณ์ที่จำเป็น</h2>
+<div class="content">
+  <h3 data-i18n-key="equip_tank_h">บ่อชุบ</h3>
+  <p data-i18n-key="equip_tank_p">
+    บ่อชุบคือภาชนะที่ใช้บรรจุสารเคมีสำหรับกระบวนการชุบโลหะ การเลือกวัสดุที่ใช้บุบ่อชุบมีความสำคัญมาก เนื่องจากสารเคมีในบ่อชุบมีฤทธิ์กัดกร่อนสูง: PVC (Polyvinyl Chloride), PE (Polyethylene), หรือ PP (Polypropylene) เป็นพลาสติกชนิดทนกรด-ด่าง จึงเหมาะสำหรับใช้บุหรือสร้างบ่อชุบ เพื่อป้องกันไม่ให้โครงสร้างหลักของบ่อ เช่น เหล็กหรือคอนกรีต ถูกกัดกร่อนจากสารละลายเคมี
+  </p>
+
+  <h3 data-i18n-key="equip_filter_h">เครื่องกรอง</h3>
+  <p data-i18n-key="equip_filter_p">
+    เครื่องกรองใช้เพื่อรักษาคุณภาพของสารละลายในบ่อชุบให้สะอาดอยู่เสมอ โดยการกรองแบบต่อเนื่อง 10 µm หมายถึงการกรองสารละลายในบ่อชุบอย่างต่อเนื่องตลอดเวลาที่ทำการชุบ ด้วยไส้กรองความละเอียด 10 ไมโครเมตร เพื่อกำจัดอนุภาคเล็ก ๆ ที่อาจปนเปื้อน ซึ่งอาจทำให้ผิวชิ้นงานไม่เรียบเนียนหรือเกิดตำหนิได้
+  </p>
+
+  <h3 data-i18n-key="equip_temp_h">ระบบทำความร้อน/ระบายความร้อน</h3>
+  <p data-i18n-key="equip_temp_p">
+    การควบคุมอุณหภูมิของสารละลายเป็นสิ่งจำเป็นอย่างยิ่งในกระบวนการชุบโลหะ ช่วงอุณหภูมิที่เหมาะสมสำหรับสารละลายชุบนิกเกิลคือ 48–60 °C ช่วงนี้ช่วยให้ปฏิกิริยาเคมีดำเนินไปอย่างมีประสิทธิภาพ ทำให้การเคลือบเป็นไปอย่างสม่ำเสมอและได้คุณสมบัติที่ต้องการ
+  </p>
+
+  <h3 data-i18n-key="equip_agit_h">ระบบกวน</h3>
+  <p data-i18n-key="equip_agit_p">
+    ระบบกวนช่วยให้สารละลายในบ่อชุบมีความสม่ำเสมอ และป้องกันการสะสมของอนุภาคที่ผิวชิ้นงาน ถังแขวนใช้การแกว่งชิ้นงานช่วยกวนเป็นวิธีที่นิยม โดยแขวนชิ้นงานบนราวแล้วแกว่งอย่างช้า ๆ ระหว่างการชุบ เพื่อให้สารละลายรอบชิ้นงานไหลเวียน ไอออนของนิกเกิลเข้าถึงผิวได้ทั่วถึง และได้การเคลือบสม่ำเสมอทั้งชิ้นงาน
+  </p>
+</div>
+
       </section>
     </article>
   </main>
@@ -494,6 +537,32 @@
         proc_s5:"ชุบโครเมียมต่อ หากเป็นงานตกแต่ง",
         proc_s6:"อบแห้ง/เป่าแห้ง",
 
+              process_h: "ส่วนที่ 2: ขั้นตอนการชุบ",
+
+      proc_1_h: "การเตรียมผิว",
+      proc_1_p: "เป็นขั้นตอนที่สำคัญที่สุดเพื่อให้ได้การเคลือบที่ยึดเกาะดีและสม่ำเสมอ",
+      proc_1_s1: "ทำความสะอาด: ขจัดคราบสกปรกทั่วไป เช่น ฝุ่น ดิน หรือคราบไขมันที่เกาะอยู่บนชิ้นงาน โดยอาจใช้ผงซักฟอกหรือสารละลายทำความสะอาดที่เหมาะสม",
+      proc_1_s2: "ขจัดไขมัน (Degreasing): เป็นการทำความสะอาดคราบไขมันที่มองไม่เห็น เช่น คราบน้ำมันจากการกลึงหรือคราบจาระบี ซึ่งมักใช้สารเคมีที่มีฤทธิ์เป็นด่างหรือตัวทำละลายอินทรีย์",
+      proc_1_s3: "ล้างน้ำ: ล้างชิ้นงานด้วยน้ำสะอาดหลาย ๆ ครั้ง เพื่อกำจัดสารเคมีและสิ่งสกปรกที่ตกค้างออกให้หมดก่อนเข้าสู่ขั้นตอนต่อไป",
+
+      proc_2_h: "การแอคทิเวต (Activation)",
+      proc_2_p: "เป็นการปรับสภาพพื้นผิวให้พร้อมสำหรับการชุบ",
+      proc_2_s1: "ดิปกรดอ่อน: นำชิ้นงานไปแช่ในสารละลายกรดอ่อน เช่น กรดซัลฟูริก หรือกรดไฮโดรคลอริก เพื่อกำจัดชั้นออกไซด์บาง ๆ ที่อาจเกิดขึ้นบนผิวโลหะ ทำให้ผิวโลหะสะอาดและพร้อมสำหรับการรับการเคลือบ",
+      proc_2_s2: "ล้างน้ำ: ล้างน้ำอีกครั้งเพื่อกำจัดกรดที่ตกค้าง",
+
+      proc_3_h: "การชุบนิกเกิลเงา",
+      proc_3_p1: "ชุบในบ่อ A-Brite: สารละลายมาตรฐานสำหรับการชุบนิกเกิล ประกอบด้วย นิกเกิลซัลเฟต (Nickel Sulfate) เป็นแหล่งของไอออนนิกเกิล, นิกเกิลคลอไรด์ (Nickel Chloride) ช่วยเพิ่มการนำไฟฟ้าและลดการเกิดฟอง, และกรดบอริก (Boric Acid) ช่วยควบคุมค่า pH ในการชุบ",
+      proc_3_p2: "A-Brite: เป็นสารเติมแต่งที่ทำให้การชุบออกมาเป็นเงา ซึ่งอาจเป็นสารอินทรีย์หรือสารเคมีชนิดอื่นที่ช่วยปรับปรุงคุณสมบัติของสารละลาย เช่น ช่วยให้ผิวเคลือบเรียบเนียน เป็นมันเงา และเพิ่มความสามารถในการกระจายตัวของกระแสไฟฟ้า โดยควบคุมตัวแปรสำคัญ ได้แก่ ความหนาแน่นกระแส (Current Density) อุณหภูมิ (Temperature) และค่า pH เพื่อให้ได้ผลลัพธ์ที่ดีที่สุด",
+
+      proc_4_h: "การล้างน้ำ",
+      proc_4_p: "หลังจากชุบเสร็จ ต้องล้างน้ำสะอาด 2–3 ขั้น เพื่อล้างสารเคมีที่ตกค้างออกให้หมดก่อนไปขั้นตอนต่อไป",
+
+      proc_5_h: "การชุบโครเมียมต่อ",
+      proc_5_p: "การชุบนิกเกิลเดี่ยว ๆ จะมีสีเหลืองนวลคล้ายสเตนเลส แต่ยังไม่ทนทานต่อรอยขีดข่วนเท่าที่ควร การชุบโครเมียมต่อจากชั้นนิกเกิลจึงเป็นที่นิยมในงานตกแต่ง เพื่อให้ได้สีเงินสว่างสวยงาม และเพิ่มความทนทานต่อการสึกหรอและการกัดกร่อนได้ดียิ่งขึ้น",
+
+      proc_6_h: "การอบแห้ง/เป่าแห้ง",
+      proc_6_p: "เป็นขั้นตอนสุดท้ายเพื่อทำให้ชิ้นงานแห้งสนิทก่อนนำไปใช้งานหรือจัดเก็บ",
+
         /* Conditions & equipment */
         cond_h:"สภาพการทำงานและอุปกรณ์ที่จำเป็น",
         cond_params_h:"สภาพการทำงาน (แนะนำ)",
@@ -514,6 +583,17 @@
         equip_s2:"เครื่องกรอง: ต่อเนื่อง 10 µm",
         equip_s3:"ทำความร้อน/ระบายความร้อน 48–60 °C",
         equip_s4:"ระบบกวน: ถังแขวนใช้การแกว่งชิ้นงานช่วยกวน",
+
+      equip_h: "อุปกรณ์ที่จำเป็น",
+      equip_tank_h: "บ่อชุบ",
+      equip_tank_p: "บ่อชุบคือภาชนะที่ใช้บรรจุสารเคมีสำหรับกระบวนการชุบโลหะ การเลือกวัสดุที่ใช้บุบ่อชุบมีความสำคัญมาก เนื่องจากสารเคมีในบ่อชุบมีฤทธิ์กัดกร่อนสูง: PVC (Polyvinyl Chloride), PE (Polyethylene), หรือ PP (Polypropylene) เป็นพลาสติกชนิดทนกรด-ด่าง จึงเหมาะสำหรับใช้บุหรือสร้างบ่อชุบ เพื่อป้องกันไม่ให้โครงสร้างหลักของบ่อ เช่น เหล็กหรือคอนกรีต ถูกกัดกร่อนจากสารละลายเคมี",
+      equip_filter_h: "เครื่องกรอง",
+      equip_filter_p: "เครื่องกรองใช้เพื่อรักษาคุณภาพของสารละลายในบ่อชุบให้สะอาดอยู่เสมอ โดยการกรองแบบต่อเนื่อง 10 µm หมายถึงการกรองสารละลายในบ่อชุบอย่างต่อเนื่องตลอดเวลาที่ทำการชุบ ด้วยไส้กรองความละเอียด 10 ไมโครเมตร เพื่อกำจัดอนุภาคเล็ก ๆ ที่อาจปนเปื้อน ซึ่งอาจทำให้ผิวชิ้นงานไม่เรียบเนียนหรือเกิดตำหนิได้",
+      equip_temp_h: "ระบบทำความร้อน/ระบายความร้อน",
+      equip_temp_p: "การควบคุมอุณหภูมิของสารละลายเป็นสิ่งจำเป็นอย่างยิ่งในกระบวนการชุบโลหะ ช่วงอุณหภูมิที่เหมาะสมสำหรับสารละลายชุบนิกเกิลคือ 48–60 °C ช่วงนี้ช่วยให้ปฏิกิริยาเคมีดำเนินไปอย่างมีประสิทธิภาพ ทำให้การเคลือบเป็นไปอย่างสม่ำเสมอและได้คุณสมบัติที่ต้องการ",
+      equip_agit_h: "ระบบกวน",
+      equip_agit_p: "ระบบกวนช่วยให้สารละลายในบ่อชุบมีความสม่ำเสมอ และป้องกันการสะสมของอนุภาคที่ผิวชิ้นงาน ถังแขวนใช้การแกว่งชิ้นงานช่วยกวนเป็นวิธีที่นิยม โดยแขวนชิ้นงานบนราวแล้วแกว่งอย่างช้า ๆ ระหว่างการชุบ เพื่อให้สารละลายรอบชิ้นงานไหลเวียน ไอออนของนิกเกิลเข้าถึงผิวได้ทั่วถึง และได้การเคลือบสม่ำเสมอทั้งชิ้นงาน",
+    
 
         /* Footer */
         footer_products:"หมวดผลิตภัณฑ์",
@@ -588,6 +668,32 @@
         proc_s5:"Chrome plate if decorative finish is required.",
         proc_s6:"Dry by oven or air.",
 
+              process_h: "Part 2: Plating steps",
+
+      proc_1_h: "Surface preparation",
+      proc_1_p: "The most critical step to achieve strong adhesion and a uniform deposit.",
+      proc_1_s1: "Cleaning: Remove general soils such as dust, dirt, and visible grease using a suitable detergent or cleaner.",
+      proc_1_s2: "Degreasing: Eliminate invisible machining oils and greases using an alkaline cleaner or organic solvent.",
+      proc_1_s3: "Rinsing: Thoroughly rinse the workpiece multiple times with clean water to remove residual chemicals before proceeding.",
+
+      proc_2_h: "Activation",
+      proc_2_p: "Condition the surface so it is ready to accept the deposit.",
+      proc_2_s1: "Mild acid dip: Immerse in a mild acid (e.g., sulfuric or hydrochloric) to remove thin oxide films and expose a clean, active surface.",
+      proc_2_s2: "Rinse: Rinse again to remove residual acid.",
+
+      proc_3_h: "Bright nickel plating",
+      proc_3_p1: "Plate in an A-Brite (Watt’s-type) bath: the standard solution contains Nickel Sulfate as the Ni²⁺ source, Nickel Chloride to improve conductivity and reduce gassing, and Boric Acid to buffer and stabilize pH.",
+      proc_3_p2: "A-Brite additives produce a bright, leveled deposit—often organic components that improve smoothness, brightness, and throwing power. Control current density, temperature, and pH to achieve optimal results.",
+
+      proc_4_h: "Water rinsing",
+      proc_4_p: "After plating, rinse through 2–3 stages to remove all residues before the next step.",
+
+      proc_5_h: "Chromium over-plating",
+      proc_5_p: "Nickel alone has a warm, stainless-like yellowish tone and limited scratch resistance. A decorative chromium topcoat over nickel is commonly used to obtain a bright silver appearance and improved wear and corrosion resistance.",
+
+      proc_6_h: "Drying",
+      proc_6_p: "Final step—ensure the parts are completely dry before use or storage.",
+
         /* Conditions & equipment */
         cond_h:"Operating conditions & required equipment",
         cond_params_h:"Operating window (recommended)",
@@ -603,11 +709,21 @@
         cond_filter_val:"Continuous circulation with 10 µm cartridge",
         cond_agit_val:"Rock parts; gas/liquid agitation as appropriate",
 
-        equip_h:"Required equipment",
         equip_s1:"Plating tank: PVC, PE, or PP lined",
         equip_s2:"Filtration unit: continuous, 10 µm",
         equip_s3:"Heating/cooling to maintain 48–60 °C",
         equip_s4:"Agitation: rack tanks benefit from part rocking",
+
+      equip_h: "Required equipment",
+      equip_tank_h: "Plating tank",
+      equip_tank_p: "The plating tank holds the chemical solution for the metal finishing process. Tank lining material is crucial because the chemistry is highly corrosive: PVC (Polyvinyl Chloride), PE (Polyethylene), or PP (Polypropylene) are acid/alkali-resistant plastics suitable for lining or constructing tanks, protecting the structural shell (e.g., steel or concrete) from chemical attack.",
+      equip_filter_h: "Filtration",
+      equip_filter_p: "Filtration keeps the bath clean and consistent. Continuous 10 µm means filtering the solution at all times during production with a 10-micron element to remove fine particulates that would otherwise cause roughness or surface defects.",
+      equip_temp_h: "Heating / cooling system",
+      equip_temp_p: "Temperature control is essential. A typical nickel bath operates at 48–60 °C, a range that supports efficient kinetics and yields a uniform, high-quality deposit.",
+      equip_agit_h: "Agitation",
+      equip_agit_p: "Agitation maintains homogeneity and prevents particle build-up on the surface. For rack lines, gentle rack oscillation is common—slowly swinging parts during plating promotes solution flow and uniform ion transport, resulting in even coverage over the entire workpiece.",
+ 
 
         /* Footer */
         footer_products:"Products",
