upload all files

--- a/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
@@ -251,49 +251,37 @@
 
         <div class="features__grid">
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://images.unsplash.com/photo-1519003300449-424ad0405076?q=80&w=600&auto=format&fit=crop" alt="Adhesion on steel and zinc">
-            </div>
+            <div class="features__icon" aria-hidden="true">🧲</div>
             <h3 class="features__title" data-i18n-key="feat_1_t">ยึดเกาะยอดเยี่ยมบนเหล็ก/ซิงค์</h3>
             <p class="features__desc" data-i18n-key="feat_1_d">ป้องกันการลอกจากปฏิกิริยาแทนที่ สร้างฐานก่อนชุบถัดไป</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://images.unsplash.com/photo-1581093588401-16e7c09a5cda?q=80&w=600&auto=format&fit=crop" alt="Throwing power into recesses">
-            </div>
+            <div class="features__icon" aria-hidden="true">⚡</div>
             <h3 class="features__title" data-i18n-key="feat_2_t">Throwing Power สูง</h3>
             <p class="features__desc" data-i18n-key="feat_2_d">เคลือบซอก/รู/ร่องลึกได้ทั่วถึงเหมาะชิ้นงานซับซ้อน</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://images.unsplash.com/photo-1581092580491-7c74c6c2d5b6?q=80&w=600&auto=format&fit=crop" alt="Matte thin copper layer">
-            </div>
+            <div class="features__icon" aria-hidden="true">🧪</div>
             <h3 class="features__title" data-i18n-key="feat_3_t">ผิวบาง/ด้านควบคุมได้</h3>
             <p class="features__desc" data-i18n-key="feat_3_d">โดยทั่วไป ~1–3 µm เหมาะเป็นชั้นรองพื้นไม่เน้นความหนา</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://images.unsplash.com/photo-1581090700227-1e37b190418e?q=80&w=600&auto=format&fit=crop" alt="Safer non-cyanide option">
-            </div>
+            <div class="features__icon" aria-hidden="true">🌱</div>
             <h3 class="features__title" data-i18n-key="feat_4_t">มีทางเลือกปลอดไซยาไนด์</h3>
             <p class="features__desc" data-i18n-key="feat_4_d">ลดอันตราย/กลิ่น/ภาระบำบัดน้ำเสียเมื่อเทียบระบบดั้งเดิม</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://i.imgur.com/hxd5AMV.jpeg" alt="Compatible with Ni/Cr build">
-            </div>
+            <div class="features__icon" aria-hidden="true">🧩</div>
             <h3 class="features__title" data-i18n-key="feat_5_t">พร้อมขึ้น Acid Cu / Ni / Cr</h3>
             <p class="features__desc" data-i18n-key="feat_5_d">เป็นฐานที่ดีสำหรับการสร้างผิวเรียบ/เงาในขั้นถัดไป</p>
           </article>
 
           <article class="features__item">
-            <div class="features__icon" aria-hidden="true">
-              <img src="https://i.imgur.com/hxd5AMV.jpeg" alt="Robust process window">
-            </div>
+            <div class="features__icon" aria-hidden="true">🕳️</div>
             <h3 class="features__title" data-i18n-key="feat_6_t">หน้าต่างการทำงานยืดหยุ่น</h3>
             <p class="features__desc" data-i18n-key="feat_6_d">รองรับรูปทรง/โหลดหลากหลาย คุมคุณภาพได้สม่ำเสมอ</p>
           </article>
