--- a/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
+++ b/products/platingcoating/copperplating/troubleshootingcoppercyanide/index.html
@@ -212,7 +212,7 @@
     <a class="back-chip" href="https://www.baumechemical.com/products/platingcoating/copperplating/index.html" data-i18n-key="back_home">← กลับเมนูหลัก</a>
     <div class="wrap" style="display:block; padding:28px 16px; max-width:1200px; margin:auto">
       <h1 data-i18n-key="hero_title">Alkaline Copper Strike — ชั้นรองพื้นทองแดง</h1>
-      <p data-i18n-key="hero_tagline">ป้องกันปฏิกิริยาแทนที่บนเหล็ก/ซิงค์ ยึดเกาะดี เข้าซอกสูง ผิวด้านบาง 1–3 µm รองรับ Acid Copper/Ni/Cr ต่อ</p>
+      <p data-i18n-key="hero_tagline">การชุบทองแดงด่างใช้สารละลายด่างเพื่อป้องกันปฏิกิริยาบนเหล็ก/สังกะสี และให้การยึดเกาะที่ดีเยี่ยมแม้ในชิ้นงานที่ซับซ้อน. ชั้นเคลือบที่ได้จะบางและด้าน (1–3 µm) ซึ่งเหมาะสำหรับเป็นชั้นรองพื้นก่อนการชุบโลหะอื่นๆ เช่น นิกเกิลหรือโครเมียม.</p>
     </div>
   </header>
 
@@ -528,10 +528,9 @@
     const I18N = {
       th: {
         title:"Alkaline Copper Strike — ชั้นรองพื้นทองแดง | Baume Chemical",
-        nav_home:"หน้าแรก", nav_about:"เกี่ยวกับเรา", nav_products:"สินค้า", nav_contact:"ติดต่อเรา", nav_blog:"บล็อก",
         back_home:"← กลับเมนูหลัก",
         hero_title:"Alkaline Copper Strike — ชั้นรองพื้นทองแดง",
-        hero_tagline:"ป้องกันปฏิกิริยาแทนที่บนเหล็ก/ซิงค์ ยึดเกาะดี เข้าซอกสูง ผิวด้านบาง 1–3 µm รองรับ Acid Copper/Ni/Cr ต่อ",
+        hero_tagline:"การชุบทองแดงด่างใช้สารละลายด่างเพื่อป้องกันปฏิกิริยาบนเหล็ก/สังกะสี และให้การยึดเกาะที่ดีเยี่ยมแม้ในชิ้นงานที่ซับซ้อน. ชั้นเคลือบที่ได้จะบางและด้าน (1–3 µm) ซึ่งเหมาะสำหรับเป็นชั้นรองพื้นก่อนการชุบโลหะอื่นๆ เช่น นิกเกิลหรือโครเมียม.",
 
         toc_title:"สารบัญ",
         toc_intro:"ภาพรวม",
@@ -680,7 +679,7 @@
         nav_home:"Home", nav_about:"About us", nav_products:"Products", nav_contact:"Contact Us", nav_blog:"Blog",
         back_home:"← Back to Home",
         hero_title:"Alkaline Copper Strike — Adhesion Undercoat",
-        hero_tagline:"Prevents displacement on steel/zinc; strong adhesion, high throwing power, thin matte 1–3 µm; ready for Acid Cu/Ni/Cr build.",
+        hero_tagline:"Alkaline copper plating uses an alkaline solution to prevent reactions on steel/zinc, providing excellent adhesion and high throwing power for complex parts. The resulting thin (1–3 µm), matte layer is ideal as a base coat for subsequent nickel or chrome plating.",
 
         toc_title:"Contents",
         toc_intro:"Overview",
